--- a/eda.ipynb
+++ b/eda.ipynb
@@ -9,11 +9,21 @@
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aeae9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML_VENV (3.10.7)",
+   "display_name": "entorno",
    "language": "python",
    "name": "python3"
   },
@@ -27,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
